[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riskradar"
version = "0.1.0"
description = "Early warning system for emerging threats"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "RiskRadar Team", email = "contact@riskradar.io"}
]
keywords = ["security", "threat-intelligence", "incident-response", "risk-assessment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "elasticsearch>=8.11.0",
    "scrapy>=2.11.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "selenium>=4.15.2",
    "aiohttp>=3.9.1",
    "transformers>=4.36.0",
    "torch>=2.1.1",
    "spacy>=3.7.2",
    "scikit-learn>=1.3.2",
    "nltk>=3.8.1",
    "textblob>=0.17.1",
    "vaderSentiment>=3.3.2",
    "pandas>=2.1.4",
    "numpy>=1.25.2",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "celery>=5.3.4",
    "kombu>=5.3.4",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "httpx>=0.25.2",
    "python-multipart>=0.0.6",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "tweepy>=4.14.0",
    "praw>=7.7.1",
    "python-slugify>=8.0.1",
    "validators>=0.22.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/your-username/RiskRadar"
Documentation = "https://riskradar.readthedocs.io"
Repository = "https://github.com/your-username/RiskRadar.git"
"Bug Tracker" = "https://github.com/your-username/RiskRadar/issues"

[project.scripts]
riskradar = "riskradar.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["riskradar*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["riskradar"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=riskradar --cov-report=term-missing --cov-report=html"
